-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
None
-
9182ef97f (dev), ec03be43c (6.7)
Currently, it seems that tst_qmlls_utils is testing the qmlls utils with different options that qmlls is using.
This is problematic, because:
- tst_qmlls_utils tests codepaths that qmlls does not use
- The corresponding functionalities, for example "go to type definition", might work in tst_qmlls_utils but stop working in qmlls (for example, due to changes in the Dom construction) and there will be no test to warn about this case
In fact, due to, for example https://codereview.qt-project.org/c/qt/qtdeclarative/+/526805/10, "go to type definition" and "go to definition" stopped working. Same for lots of other commits extending the Dom and breaking the code in qmllsutils.
Therefore, make sure to construct the Dom in tst_qmlls_utils in the same way as qmlls does it, that means including the DomCreationOptions that were added after those tst_qmlls_utils tests were written!
Once that is done, tend to all tests that are failing now and adapt them to the new Dom structure (for example the change of id's to scriptidentiferexpressions or types to FieldMemberExpressions).
- resulted from
-
QTBUG-120111 qmlls: missing completion for qualified types
-
- Closed
-
-
QTBUG-113727 qmlls: improve Code completion using new QQmlLSUtils stuff
-
- Closed
-
For Gerrit Dashboard: QTBUG-120677 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
528815,3 | tst_qmlls_utils: use same DomCreationOptions as qmlls | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
531083,2 | tst_qmlls_utils: use same DomCreationOptions as qmlls | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |