tst_qmlls_utils: use same DomCreationOptions as qmlls

Fix the tst_qmlls_utils tests to use the same DomCreationOptions as
qmlls: otherwise, the tst_qmlls_utils methods will not cover the code
used by qmlls.

Adapt some qmllsutils method to the changes introduced by enabling
scriptexpressions to make all tests pass.
This includes:
* change the way the Dom is created in tst_qmlls_utils to use all
  options
* adapting qmllsutils to the new id's
* fixing the incorrect QML code from QEXPECT_FAIL'd tests on inline
  components (MyBaseInlineComponent and MyNestedInlineComponent in
  Type.qml were missing a qualifier and were invalid QML code) and the
  actually correct results for these tests (even if the are still marked
  as QEXPECT_FAIL)
* Fix the expected return of the findItemFromLocation methods: it should
  find ScriptLiteral's and ScriptIdentifierExpression instead of the
  surrounding Binding or Id or MethodParameter or MethodInfo object,
  thanks to the changes in the Dom.

Fixes: QTBUG-120677
Change-Id: I53d06baa9b49a671bce1d584edd60cdf94772a7b
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 9182ef97fb720bbbadfd312bf62d476c33b5b866)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>